[package]
name = "pj"
version = "0.1.1"
authors = ["Cerek Hillen <chillen@lyft.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
crossbeam = "0.8.2"
num_cpus = "1.13.0"
rayon = "1.6.1"
regex = "1.4.2"
structopt = "0.3.21"
